# gpu-integers-compression

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bp_bench.cpp  cuda_bp_bench.cu  cuda_copy_bench.cu  cuda_delta_bench.cu  cuda_vbyte_bench.cu  simdbp_bench.cpp  streamvbyte_bench.cpp  synthetic.hpp  varintgb_bench.cpp
include/bp/: cuda_bp.cuh  cuda_common.hpp  cuda_copy.cuh  cuda_delta.cuh  cuda_vbyte.cuh  utils.hpp
include/bp/utils/: utils.hpp
include/gpu_ic/: cuda_bp.cuh  cuda_copy.cuh  cuda_delta.cuh  cuda_vbyte.cuh
include/gpu_ic/utils/: .binary_collection.hpp.swp  binary_collection.hpp  binary_freq_collection.hpp  bit_istream.hpp  bit_ostream.hpp  bit_vector.hpp  broadword.hpp  cuda_utils.hpp  index.cuh  index.hpp  intrinsics.hpp  mappable_vector.hpp  mapper.hpp  posting_list.hpp  progress.hpp  tables.hpp  tight_variable_byte.hpp  utils.hpp
src/: .perf_decode.cpp.swp  CMakeLists.txt  compress_index.cpp  cuda_compress_index.cu  cuda_perf_decode.cu  perf_decode.cpp
test/: CMakeLists.txt  bp_test.cpp  cuda_bp_test.cu  util.hpp
